crates/compiler/tests/parse_errors/unexpected_capital.elm
module Main exposing (..)
Y = 2
